Agregadas las imagenes de los clubes, y tabla de posiciones lista

--- a/Ventanas/posicion.html
+++ b/Ventanas/posicion.html
@@ -75,13 +75,343 @@
             <thead>
                 <tr>
                     <th class="fila_s">Posición</th>
-                    <th class="fila_l">Club</th>
+                    <th class="fila_l_start">Club</th>
                     <th class="fila_s">Partidos</th>
                     <th class="fila_m">Últimos 5</th>
+                    <th class="fila_m">Goles (A favor/En contra)</th>
                     <th class="fila_s">+/-</th>
                     <th class="fila_s">Puntos</th>
                 </tr>
             </thead>
+            <tbody id="tabla_pos">
+                <tr>
+                    <td>1</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/talleres.png" alt="Club Atlético Talleres" class="imagen_posiciones">
+                        <a href="https://www.clubtalleres.com.ar" target="_blank" class="links_no_deco">Talleres</a>
+                    </td>
+                    <td>1</td>
+                    <td>V / - / - / - / -</td>
+                    <td>2 : 0</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/racing.png" alt="Racing Club" class="imagen_posiciones">
+                        <a href="https://www.racingclub.com.ar" target="_blank" class="links_no_deco">Racing</a>
+                    </td>
+                    <td>1</td>
+                    <td>V / - / - / - / -</td>
+                    <td>2 : 0</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/boca.png" alt="Boca Juniors" class="imagen_posiciones">
+                        <a href="https://www.bocajuniors.com.ar" target="_blank" class="links_no_deco">Boca</a>
+                    </td>
+                    <td>1</td>
+                    <td>V / - / - / - / -</td>
+                    <td>2 : 1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/newells.png" alt="Newell's" class="imagen_posiciones">
+                        <a href="https://www.newellsoldboys.com.ar" target="_blank" class="links_no_deco">Newell's</a>
+                    </td>
+                    <td>1</td>
+                    <td>V / - / - / - / -</td>
+                    <td>2 : 1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/platense.png" alt="Platense" class="imagen_posiciones">
+                        <a href="https://cap.org.ar" target="_blank" class="links_no_deco">Platense</a>
+                    </td>
+                    <td>1</td>
+                    <td>V / - / - / - / -</td>
+                    <td>2 : 1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/tigre.png" alt="Tigre" class="imagen_posiciones">
+                        <a href="https://catigre.com.ar" target="_blank" class="links_no_deco">Tigre</a>
+                    </td>
+                    <td>1</td>
+                    <td>V / - / - / - / -</td>
+                    <td>2 : 1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/argentinos.png" alt="Argentinos Juniors" class="imagen_posiciones">
+                        <a href="https://argentinosjuniors.com.ar
+                        " target="_blank" class="links_no_deco">Argentinos Jrs.</a>
+                    </td>
+                    <td>1</td>
+                    <td>V / - / - / - / -</td>
+                    <td>2 : 1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/barracas.png" alt="Barracas Central" class="imagen_posiciones">
+                        <a href="http://www.barracascentral.com" target="_blank" class="links_no_deco">Barracas Central</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/patronato.png" alt="Patronato" class="imagen_posiciones">
+                        <a href="https://capatronato.com" target="_blank" class="links_no_deco">Patronato</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/tucuman.png" alt="Atlético Tucumán" class="imagen_posiciones">
+                        <a href="https://www.clubatleticotucuman.com.ar" target="_blank" class="links_no_deco">Atlético Tucumán</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/sanlorenzo.png" alt="San Lorenzo" class="imagen_posiciones">
+                        <a href="https://sanlorenzo.com.ar" target="_blank" class="links_no_deco">San Lorenzo</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/independiente.png" alt="Independiente" class="imagen_posiciones">
+                        <a href="https://clubaindependiente.com.ar" target="_blank" class="links_no_deco">Independiente</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/colon.png" alt="Colon" class="imagen_posiciones">
+                        <a href="https://clubcolon.com.ar" target="_blank" class="links_no_deco">Colón</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/estudiantes.png" alt="Estudiantes" class="imagen_posiciones">
+                        <a href="https://www.estudiantesdelaplata.com" target="_blank" class="links_no_deco">Estudiantes</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/velez.png" alt="Velez Sarfield" class="imagen_posiciones">
+                        <a href="https://velez.com.ar" target="_blank" class="links_no_deco">Vélez Sarfield</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/centralcordoba.png" alt="Central Córdoba" class="imagen_posiciones">
+                        <a href="https://www.cacentralcordoba.com" target="_blank" class="links_no_deco">Central Córdoba</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/gimnasia.png" alt="Gimnasia" class="imagen_posiciones">
+                        <a href="http://www.gimnasia.org.ar" target="_blank" class="links_no_deco">Gimnasia</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>1 : 1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>18</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/defensa.png" alt="Defensa y Justicia" class="imagen_posiciones">
+                        <a href="http://www.defensayjusticia.org.ar" target="_blank" class="links_no_deco">Defensa y Justicia</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>0 : 0</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>19</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/rosario.png" alt="Rosario Central" class="imagen_posiciones">
+                        <a href="https://rosariocentral.com" target="_blank" class="links_no_deco">Rosario Central</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>0 : 0</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>20</td>
+                    <td class="no_border_escudo"><img src="../Assets/Images/Logo-sin-wt .png" alt="We, Together" class="imagen_posiciones">
+                        <a href="../index.html" target="_blank" class="links_no_deco">We, Together</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>0 : 0</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>21</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/lanus.png" alt="Lanús" class="imagen_posiciones">
+                        <a href="https://www.clublanus.com" target="_blank" class="links_no_deco">Lanús</a>
+                    </td>
+                    <td>1</td>
+                    <td>E / - / - / - / -</td>
+                    <td>0 : 0</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>22</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/arsenal.png" alt="Arsenal" class="imagen_posiciones">
+                        <a href="http://www.celesteyrojo.com.ar" target="_blank" class="links_no_deco">Arsenal</a>
+                    </td>
+                    <td>1</td>
+                    <td>D / - / - / - / -</td>
+                    <td>1 : 2</td>
+                    <td>-1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>23</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/aldosivi.png" alt="Aldosivi" class="imagen_posiciones">
+                        <a href="https://www.aldosivi.com" target="_blank" class="links_no_deco">Aldosivi</a>
+                    </td>
+                    <td>1</td>
+                    <td>D / - / - / - / -</td>
+                    <td>1 : 2</td>
+                    <td>-1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>24</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/godoycruz.png" alt="Godoy Cruz" class="imagen_posiciones">
+                        <a href="http://clubgodoycruz.com.ar" target="_blank" class="links_no_deco">Godoy Cruz</a>
+                    </td>
+                    <td>1</td>
+                    <td>D / - / - / - / -</td>
+                    <td>1 : 2</td>
+                    <td>-1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>25</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/banfield.png" alt="Banfield" class="imagen_posiciones">
+                        <a href="https://clubabanfield.org" target="_blank" class="links_no_deco">Banfield</a>
+                    </td>
+                    <td>1</td>
+                    <td>D / - / - / - / -</td>
+                    <td>1 : 2</td>
+                    <td>-1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>26</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/union.png" alt="Unión" class="imagen_posiciones">
+                        <a href="https://www.clubaunion.com.ar" target="_blank" class="links_no_deco">Unión</a>
+                    </td>
+                    <td>1</td>
+                    <td>D / - / - / - / -</td>
+                    <td>1 : 2</td>
+                    <td>-1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>27</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/huracan.png" alt="Huracán" class="imagen_posiciones">
+                        <a href="https://cahuracan.com" target="_blank" class="links_no_deco">Huracán</a>
+                    </td>
+                    <td>1</td>
+                    <td>D / - / - / - / -</td>
+                    <td>0 : 2</td>
+                    <td>-2</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>28</td>
+                    <td class="no_border_escudo"><img src="../Assets/Imagen-Clubes/sarmiento.png" alt="Sarmiento" class="imagen_posiciones">
+                        <a href="https://sentimientoverde.com.ar" target="_blank" class="links_no_deco">Sarmiento</a>
+                    </td>
+                    <td>1</td>
+                    <td>D / - / - / - / -</td>
+                    <td>0 : 2</td>
+                    <td>-2</td>
+                    <td>1</td>
+                </tr>
+            </tbody>
         </table>
+    </div>
 
+    <div class="footer_light_pos">
+        <div class="redes">
+            <ul class="listaRedes">
+                <li class="nombreRedes">
+                    <h1 class="tituloFooter">WE, TOGETHER</h1>
+                </li>
+                <li class="itemRedes">
+                    <a href="mailto:jeremiassappia@gmail.com"><img class="imgMail" src="../Assets/Images/mail.png" /></a>
+                </li>
+                <li class="itemRedes">
+                    <a href="https://github.com/sappiajeremias" target="_blank"><img class="imgGit" src="../assets/images/git.jpg" /></a>
+                </li>
+                <li class="itemRedes">
+                    <a href="https://www.linkedin.com/in/jeremias-sappia-a83028214/" target="_blank"><img class="imglinkedin" src="../assets/images/linkedin.png" /></a>
+                </li>
+            </ul>
+        </div>
     </div>
