--- a/Ventanas/posicion.html
+++ b/Ventanas/posicion.html
@@ -33,7 +33,7 @@
                 </li>
                 <li class="item_links">
                     <!--Link al perfil-->
-                    <a href="" class="underline_links">
+                    <a href="perfil.html" class="underline_links">
                         <p class="nav_text">PERFIL</p>
                     </a>
                 </li>
