--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <br/>
                 </p>
                 <p class="noticia_boton">
-                    <a href="" class=""><button type="button" name="Leer noticia 1" class="boton_color2 boton_pos">Leer más</button></a>
+                    <a href="Ventanas/noticia1.html" class=""><button type="button" name="Leer noticia 1" class="boton_color2 boton_pos">Leer más</button></a>
                 </p>
             </div>
             <div id="noticia2">
