Pagina terminada, faltan imagenes

--- a/Ventanas/noticia3.html
+++ b/Ventanas/noticia3.html
@@ -56,15 +56,16 @@
 
     <div id="noticia_1_texto">
 
-        <h1>La reserva se coloca como líder</h1>
-        <h4>El equipo conducido por "el Rulo" Del Valle, esta a dos partidas de coronarse campeon de la copa de reserva</h4>
-        <img src="../Assets/Images/reserva.jpg" class="img_noticia_reserva">
-        <p>El equipo de Rodrigo Del Valle disputó este martes por la mañana su partido de cuartos de final frente a Huracán y tuvo una definición muy emotiva. Luego del empate sin goles en los 90 minutos, el "witu" fue más efectivo desde los doce pasos y
-            aseguró su lugar entre los cuatro mejores del certamen. <br><br> El We,Together tuvo buenas chances para ganarlo en el complemento, como un gran remate de Felipe Salomoni y otro de Federico Moreno en tiempo adicionado. Luego, llegó la hora
-            de la definición por penales. <br><br> Por el lado del equipo dirigido por Del Valle marcaron Franco Alfonso, Lucas Monzón, Esteban Fernández y Joaquín Panichelli, mientras que el arquero rival le contuvo su remate a Peña. En tanto, Franco
-            Petroli fue la gran figura en los penales y contuvo los disparos de Pizarro y Sánchez.<br><br> En semifinal, la Reserva del witu irá frente a Estudiantes, que este martes también eliminó por penales en el clásico a Gimnasia y Esgrima La Plata.<br><br>Los
-            11 de We, Together: Petroli; L. Peña (C), Salomoni, Guillén, Casasola, Monzón, Encinas, Alfonso, Moreno, Fernández y Panichelli. DT: Del Valle<br>. Suplentes: Díaz, Petrasso, Camargo, Sánchez, Giménez, Valencia, Paz, Airala. Cambios: Airala
-            por Encimas, Camargo por Guillén.</p>
+        <h1>El club será el anfitrión del primer Master del año del APT Padel Tour</h1>
+        <h4>La presentación oficial contó con la presencia de la directora del torneo Gabriela Vaca Guzmán y del presidente del circuito Fabrice Pastor. El cuadro principal arranca el martes 29 y se verá por ESPN.</h4>
+        <img src="../Assets/Images/imagenNoticiaPadel.jpg" class="img_noticia_padel">
+        <p>APT Padel Tour vuelve a poner sus pies en Argentina. Este martes se presentó oficialmente el APT Buenos Aires Master, torneo que será auspiciado por Axion, mediante una conferencia de prensa en el SUM del We, Together de la que participaron Fabrice
+            Pastor, CEO de Monte Carlo International Sports y presidente del APT Padel Tour, y Gabriela Vaca Guzmán, la directora del certamen, además de los jugadores Adrián Allemandi, Gonzalo Alfonso y Federico Chiostri.
+            <br><br> El evento toma relevancia al tratarse del primer certamen de la temporada que se realiza en suelo nacional tras el Open de Asunción: el cuadro principal será entre el 29 de marzo y el 3 de abril en el microestadio del We, Together
+            y contará con la presencia de las mejores parejas del ranking. <br><br> Quien tomó la palabra inicialmente fue Fabrice Pastor, quien expresó que “es un placer y un sueño que el APT vaya a estar en uno de los lugares más icónicos del mundo
+            como el estadio del We, Together aquí en Argentina. Todos saben la relación que tengo con el país desde hace más de 30 años y además es la casa de muchos jugadores".<br><br>En tanto la directora del APT Axion Buenos Aires Master, Gabriela
+            Vaca Guzmán, consideró: “Desde que Fabrice Pastor me ofreció organizar este torneo en Buenos Aires no dudé en hacerlo en el Club Atlético We, Together, donde se practican más de 50 deportes y actividades sociales. El APT Axion Buenos Aires
+            Master tendrá un gran marco como se lo merece el pádel que está creciendo mucho a nivel mundial".</p>
 
     </div>
 
