--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
             </div>
             <div id="noticia2">
                 <div class="img_noticia_centrada">
-                    <img src="./Assets/Images/binance.jpg" class="img_noticia_portada" />
+                    <img src="./Assets/Images/luissuarez.webp" class="img_noticia_portada" />
                 </div>
                 <p class="noticia_titulo">
-                    El presidente del club llego a un acuerdo con Binance como su patrocinador oficial.
+                    El club está cada vez mas cerca de traer a Luis Suárez como refuerzo para la copa.
                     <br/>
                 </p>
                 <p class="noticia_boton">
-                    <a href="" class=""><button type="button" name="Leer noticia 2" class="boton_color2 boton_pos">Leer más</button></a>
+                    <a href="./Ventanas/noticia2.html" class=""><button type="button" name="Leer noticia 2" class="boton_color2 boton_pos">Leer más</button></a>
                 </p>
             </div>
             <div id="noticia3">
@@ -95,7 +95,7 @@
                     <br/>
                 </p>
                 <p class="noticia_boton">
-                    <a href="" class=""><button type="button" name="Leer noticia 1" class="boton_color3 boton_pos">Leer más</button></a>
+                    <a href="./Ventanas/noticia3.html" class=""><button type="button" name="Leer noticia 1" class="boton_color3 boton_pos">Leer más</button></a>
                 </p>
             </div>
         </div>
