--- a/Ventanas/noticia2.html
+++ b/Ventanas/noticia2.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>La reserva</title>
+    <title>Luis Suárez</title>
     <link href="../Styles/styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,15 +56,18 @@
 
     <div id="noticia_1_texto">
 
-        <h1>La reserva se coloca como líder</h1>
-        <h4>El equipo conducido por "el Rulo" Del Valle, esta a dos partidas de coronarse campeon de la copa de reserva</h4>
+        <h1>Qué tiene que pasar para que Luis Suárez llegue a River</h1>
+        <h4>El delantero uruguayo, que se recupera de la rodilla, sigue de vacaciones en Ibiza a la espera de definir su futuro profesional. No le queda mucho margen de tiempo.
+        </h4>
         <img src="../Assets/Images/reserva.jpg" class="img_noticia_reserva">
-        <p>El equipo de Rodrigo Del Valle disputó este martes por la mañana su partido de cuartos de final frente a Huracán y tuvo una definición muy emotiva. Luego del empate sin goles en los 90 minutos, el "witu" fue más efectivo desde los doce pasos y
-            aseguró su lugar entre los cuatro mejores del certamen. <br><br> El We,Together tuvo buenas chances para ganarlo en el complemento, como un gran remate de Felipe Salomoni y otro de Federico Moreno en tiempo adicionado. Luego, llegó la hora
-            de la definición por penales. <br><br> Por el lado del equipo dirigido por Del Valle marcaron Franco Alfonso, Lucas Monzón, Esteban Fernández y Joaquín Panichelli, mientras que el arquero rival le contuvo su remate a Peña. En tanto, Franco
-            Petroli fue la gran figura en los penales y contuvo los disparos de Pizarro y Sánchez.<br><br> En semifinal, la Reserva del witu irá frente a Estudiantes, que este martes también eliminó por penales en el clásico a Gimnasia y Esgrima La Plata.<br><br>Los
-            11 de We, Together: Petroli; L. Peña (C), Salomoni, Guillén, Casasola, Monzón, Encinas, Alfonso, Moreno, Fernández y Panichelli. DT: Del Valle<br>. Suplentes: Díaz, Petrasso, Camargo, Sánchez, Giménez, Valencia, Paz, Airala. Cambios: Airala
-            por Encimas, Camargo por Guillén.</p>
+        <p>La novela por el 9 de River a raíz de la inminente salida de Julián Álvarez a Manchester City sumó un nuevo capítulo, otra vez con Luis Suárez como protagonista. Y es que desde las oficinas de Núñez creen que el uruguayo se va a tomar estos días,
+            entre los octavos de final de la Copa Libertadores 2022, para decidir finalmente si viaja a Argentina.
+            <br><br> Pero para eso tienen que darse dos condiciones. Si River pasa la serie contra Vélez y Suárez -continúa de vacaciones en Ibiza- no tiene ningún equipo serio en Europa en el que jugar, la ilusión crece para reforzar al equipo de Marcelo
+            Gallardo, quien podría potenciarlo de cara al Mundial de Qatar 2022.
+            <br><br> A esta altura, la buena noticia es que Ajax se acaba de bajar de la negociación y es un competidor menos para el Millonario a la hora de gestionar la llegada del ex Atlético de Madrid.
+            <br><br> La mala, en tanto, sería competir mano a mano con Barcelona, aunque por ahora la oferta del conjunto catalán estaría supeditada a lo que suceda con Robert Lewandowski. El polaco quiere dejar Bayern Múnich y Joan Laporta está en plenas
+            negociaciones para intentar sumarlo en este mercado de pases.<br><br>"Como es un futbolista de élite y en este momento está haciendo una recuperación de la limpieza en la rodilla, por más que lo pudiéramos tener hoy, mañana no puede jugar",
+            comentó en primera instancia Gallardo sobre el Pistolero.</p>
 
     </div>
 
